@@ -20,7 +20,7 @@ if {![package vsatisfies [package provide Tcl] 8.4]} {return}
     widget::menuentry		1.0	mentry.tcl
     widget::panelframe		1.0	panelframe.tcl
     widget::ruler		1.1	ruler.tcl
-    widget::screenruler		1.1	ruler.tcl
+    widget::screenruler		1.2	ruler.tcl
     widget::scrolledtext	1.0	stext.tcl
     widget::scrolledwindow	1.2	scrollw.tcl
     widget::statusbar		1.2	statusbar.tcl
